se han agregado login para la ruleta

--- a/templates/home.html
+++ b/templates/home.html
@@ -37,7 +37,7 @@ RULETA
           <!--Boton jugar-->
 
 
-          <a class="button is-info" href="{{ url_for('reglas') }}">JUGAR</a>
+          <a class="button is-info" href="{{ url_for('usuario') }}">JUGAR</a>
 
     
     </div>
