--- a/templates/intentos.html
+++ b/templates/intentos.html
@@ -55,7 +55,7 @@ MODO INTENTOS
 
                     <h5 class="subtitle is-6">Numero de intentos infinitos</h5>
 
-                    <input type="checkbox" name="intento" value=infinito>
+                    <input type="checkbox" name="intento" value="infinito">
 
                     <br>
 
