--- a/templates/intentos.html
+++ b/templates/intentos.html
@@ -36,7 +36,7 @@ MODO INTENTOS
 
                     <!--FORM -->
 
-            <form action="{{ url_for('ruleta') }}" method="post">
+            <form action="{{ url_for('intentos') }}" method="post">
                     
 
                     <!-- Modos de juego sobre intentos -->
@@ -47,7 +47,7 @@ MODO INTENTOS
 
                     <h5 class="subtitle is-6">Solo 7 intentos</h5>
 
-                    <input type="checkbox" name="intento" value=0>
+                    <input type="checkbox" name="intento" value=7>
 
                     <!-- Intentos infinitos -->
 
@@ -65,6 +65,19 @@ MODO INTENTOS
           <button class="button is-primary"><input type="hidden" name="ruleta" value="activar">JUGAR</button>
 
           </form>
+
+          <!--Volver a home.html-->
+
+
+          <br>
+
+
+
+<form action="{{ url_for('home') }}" method="post">
+
+    <button type="submit">VOLVER A HOME</button>
+    
+    </form>
 
     
     </div>
