--- a/templates/reglas.html
+++ b/templates/reglas.html
@@ -47,7 +47,7 @@ REGLAS RULETA
 
     {% set pngOpcion = 'img/' + opcion + '.png' %}
     
-    <img src="{{ url_for('static', filename=pngOpcion)}}" alt="" class="pngopcion">
+    <img src="{{ url_for('static', filename=pngOpcion)}}" alt="">
 
                     {% endfor %}
 
