Se consiguio que la informacion de aquellos usuarios que se incribieron en el sorteo, aparezcan sus correos en sorteo.html

--- a/src/templates/sorteo.html
+++ b/src/templates/sorteo.html
@@ -16,7 +16,7 @@
 
 <H1>{{ mensaje }}</H1>
 
-
+<h1>ESTOS SON LOS PARTICIPANTES HASTA AHORA: </h1>
     <br>
 
     {% for i in usuarios %}
@@ -26,6 +26,7 @@
     <br>
 
     {% endfor %}
+
 
     <br>
 
